all entitis are ready
